WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236733
Metal ANGLE: vertex array does not correctly observe contents of data buffers
https://bugs.webkit.org/show_bug.cgi?id=236733
Summary
Metal ANGLE: vertex array does not correctly observe contents of data buffers
Kyle Piddington
Reported
2022-02-16 14:30:39 PST
Metal ANGLE: vertex array does not correctly observe contents of data buffers
Attachments
Patch
(2.64 KB, patch)
2022-02-16 14:33 PST
,
Kyle Piddington
no flags
Details
Formatted Diff
Diff
Patch
(4.83 KB, patch)
2022-02-16 15:28 PST
,
Kyle Piddington
no flags
Details
Formatted Diff
Diff
Patch
(6.44 KB, patch)
2022-02-16 16:10 PST
,
Kyle Piddington
no flags
Details
Formatted Diff
Diff
Patch
(10.00 KB, patch)
2022-02-17 13:08 PST
,
Kyle Piddington
no flags
Details
Formatted Diff
Diff
Patch
(10.03 KB, patch)
2022-02-17 14:04 PST
,
Kyle Piddington
dino
: review+
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Kyle Piddington
Comment 1
2022-02-16 14:33:11 PST
Created
attachment 452250
[details]
Patch
Kyle Piddington
Comment 2
2022-02-16 14:33:14 PST
<
rdar://problem/88713302
>
EWS Watchlist
Comment 3
2022-02-16 14:34:41 PST
Note that there are important steps to take when updating ANGLE. See
https://trac.webkit.org/wiki/UpdatingANGLE
Dean Jackson
Comment 4
2022-02-16 14:40:58 PST
Comment on
attachment 452250
[details]
Patch Is there some way we could have a test for this?
Kyle Piddington
Comment 5
2022-02-16 15:28:13 PST
Created
attachment 452258
[details]
Patch
Kyle Piddington
Comment 6
2022-02-16 16:10:48 PST
Created
attachment 452267
[details]
Patch
Kyle Piddington
Comment 7
2022-02-16 16:11:39 PST
Comment on
attachment 452258
[details]
Patch Obsoleted, added test.
Kyle Piddington
Comment 8
2022-02-16 16:11:57 PST
D(In reply to Dean Jackson from
comment #4
)
> Comment on
attachment 452250
[details]
> Patch > > Is there some way we could have a test for this?
Done!
Dean Jackson
Comment 9
2022-02-17 08:05:52 PST
Comment on
attachment 452267
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=452267&action=review
I think the tests themselves are missing?
> LayoutTests/fast/canvas/buffer-data-subdata-dynamic-expected.txt:11 > +CONSOLE MESSAGE: ReferenceError: Can't find variable: debug > +layer at (0,0) size 800x600 > + RenderView at (0,0) size 800x600 > +layer at (0,0) size 800x60 > + RenderBlock {HTML} at (0,0) size 800x60 > + RenderBody {BODY} at (8,8) size 784x44 > + RenderBlock (anonymous) at (0,0) size 784x44 > + RenderHTMLCanvas {CANVAS} at (0,0) size 40x40 > + RenderText {#text} at (0,0) size 0x0 > + RenderBlock {DIV} at (0,44) size 784x0 > + RenderBlock {DIV} at (0,44) size 784x0
Oops. Looks like the test here has a typo and isn't dumping as text.
Kyle Piddington
Comment 10
2022-02-17 13:08:12 PST
Created
attachment 452421
[details]
Patch
Kyle Piddington
Comment 11
2022-02-17 14:04:48 PST
Created
attachment 452431
[details]
Patch
Dean Jackson
Comment 12
2022-02-17 16:10:38 PST
Committed
r290087
(
247442@trunk
): <
https://commits.webkit.org/247442@trunk
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug