Cherry-pick r290087. rdar://problem/88713302

Source/ThirdParty/ANGLE:
    Metal ANGLE: vertex array does not correctly observe contents of data buffers
    https://bugs.webkit.org/show_bug.cgi?id=236733
    <rdar://problem/88713302>
    <rdar://problem/88499073>

    Patch by Kyle Piddington <kpiddington@apple.com> on 2022-02-17
    Reviewed by Dean Jackson.

    Similar to previous bug (236427), we were not correctly observing changes to the
    vertex buffer data. This caused us to miss rebinding vertex buffers
    when data was updated without causing conversion

    * src/libANGLE/renderer/metal/VertexArrayMtl.h:
    * src/libANGLE/renderer/metal/VertexArrayMtl.mm:
    (rx::VertexArrayMtl::syncState):
    (rx::VertexArrayMtl::setupDraw):
    (rx::VertexArrayMtl::syncDirtyAttrib):

    Canonical link: https://commits.webkit.org/247442@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290087 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.230@safari-613-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613-branch@290704 268f45cc-cd09-0410-ab3c-d52691b4dbfc