Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/VertexArrayMtl.h
@@ -151,8 +151,9 @@ class VertexArrayMtl : public VertexArrayImpl
     mtl::BufferPool mDynamicIndexData;
 
     std::vector<uint32_t> mEmulatedInstanceAttribs;
-    bool mElementArrayDirty = true;
+
     bool mVertexArrayDirty = true;
+    bool mVertexDataDirty = true;
 };
 }  // namespace rx
 
